--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Basic SEO -->
+    <title>Tahmid | Web Developer Portfolio</title>
+    <meta
+      name="description"
+      content="I'm Tahmid, a full stack web developer from Bangladesh. I build clean, modern, and user-friendly websites using the MERN Stack."
+    />
+    <meta
+      name="keywords"
+      content="Tahmid Portfolio, Tahmid Web Developer, Tahmid React Developer, Tahmid Portfolio Website, Tahmid MERN Stack, Tahmid Full Stack Developer"
+    />
+    <meta name="author" content="Tahmid" />
+
+    <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tahmid | Portfolio</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Open Graph (Facebook / WhatsApp preview) -->
+    <meta property="og:title" content="Tahmid | Web Developer Portfolio" />
+    <meta
+      property="og:description"
+      content="Personal portfolio of Tahmid, a web developer from Bangladesh."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://tahmid-portfolio-seven.vercel.app/"
+    />
+
+    <!-- Twitter Preview -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Tahmid | Web Developer Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Personal portfolio website of Tahmid, built with React."
+    />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
