--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.svg" sizes="96x96" />
 
     <!-- Open Graph (Facebook / WhatsApp preview) -->
     <meta property="og:title" content="Tahmid | Web Developer Portfolio" />
