add best keyword

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
 
     <!-- Basic SEO -->
-    <title>Tahmid | Web Developer Portfolio</title>
+    <title>Tahmid's Portfolio</title>
     <meta
       name="description"
-      content="I'm Tahmid, a full stack web developer from Bangladesh. I build clean, modern, and user-friendly websites using the MERN Stack."
+      content="I'm Tahmid, a professional web developer from Bangladesh offering web development services. I build modern, responsive, and user-friendly websites using the MERN Stack."
     />
     <meta
       name="keywords"
-      content="Tahmid Portfolio, Tahmid Web Developer, Tahmid React Developer, Tahmid Portfolio Website, Tahmid MERN Stack, Tahmid Full Stack Developer"
+      content="Tahmid Portfolio, Tahmid Portfolio Website, Full-stack developer Bangladesh, MERN Stack Developer, Web Developer Bangladesh, Frontend Developer, Backend Developer, JavaScript Developer, web developer portfolio,web development services"
     />
     <meta name="author" content="Tahmid" />
 
@@ -22,7 +22,7 @@
     <link rel="icon" type="image/png" href="/logo.svg" sizes="96x96" />
 
     <!-- Open Graph (Facebook / WhatsApp preview) -->
-    <meta property="og:title" content="Tahmid | Web Developer Portfolio" />
+    <meta property="og:title" content="Tahmid's Portfolio" />
     <meta
       property="og:description"
       content="Personal portfolio of Tahmid, a web developer from Bangladesh."
